# terminal

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gdrive.rs  lib.rs  main.rs  ssh.rs  sync.rs  telnet.rs  vault.rs
src/components/: FileManager.tsx  HostsPage.tsx  Sidebar.tsx  TerminalView.tsx  TitleBar.tsx  UpdateToast.tsx  VaultGate.tsx  Workspace.tsx
src/components/lists/: ForwardList.tsx  HostList.tsx  KeyList.tsx  KnownHostList.tsx  SnippetList.tsx
src/components/modals/: ForwardModal.tsx  GroupModal.tsx  HostModal.tsx  KeyModal.tsx  SettingsModal.tsx  SnippetModal.tsx
src/components/panels/: AiCommandPanel.tsx  SftpPanel.tsx
src/components/ui/: Modal.tsx
src/lib/: aiTools.ts  api.ts  session.ts  themes.ts  types.ts  updater.ts
src/store/: useStore.ts
