[package]
name = "tapterm"
version = "0.1.9"
description = "Tapterm — a modern SSH/SFTP client built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "tapterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH / SFTP
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2.0"

# async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# crypto for the local vault
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

# cloud sync (Google Drive)
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "query", "rustls", "rustls-native-certs"] }
open = "5"
sha2 = "0.10"
urlencoding = "2"

# misc
anyhow = "1"
thiserror = "1"
dirs = "5"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
